Minor constant & enum refactor, type hints
Split method type enum into separate enums for function types (regular, protected, private, magic) and class method types (regular, classmethod, staticmethod)

Move AST constants to module-level from class-level

Add some missing type hints

Fix typo in gitignore for Jupyter Notebook files

--- a/.gitignore
+++ b/.gitignore
@@ -3,9 +3,11 @@ __pycache__/
 *.py[cod]
 *$py.class
 
-# Scratchpad
+# Jupyter
 .ipynb_checkpoints
-.ipynb
+*.ipynb
+
+# Scratchpad
 test.py
 
 # Environments
