Update project structure to run as module rather than a monolith
Add a dummy testing routine to __main__ for debugging

--- a/.gitignore
+++ b/.gitignore
@@ -7,9 +7,6 @@ __pycache__/
 .ipynb_checkpoints
 *.ipynb
 
-# Scratchpad
-test.py
-
 # Environments
 .env
 .venv
@@ -28,3 +25,7 @@ venv.bak/
 
 # logs
 *.log
+
+# Scratchpad (to be deleted later)
+test.py
+test_output.txt
