--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -5,10 +5,10 @@ repos:
     - id: flake8
       additional_dependencies: [
         "pydocstyle<4.0",
-        "flake8-bugbear",
-        "flake8-docstrings",
-        "flake8-import-order",
-        "flake8-polyfill",
-        "flake8-string-format",
-        "flake8-tidy-imports"
+        "flake8-bugbear~=19.3",
+        "flake8-docstrings~=1.3",
+        "flake8-import-order~=0.18",
+        "flake8-string-format~=0.2",
+        "flake8-tidy-imports~=2.0",
+        "flake8-todo~=0.7",
       ]
