--- a/Pipfile
+++ b/Pipfile
@@ -4,21 +4,21 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-"flake8" = "*"
+"flake8" = "~=3.7.8"
 
 [dev-packages]
+"flake8-bugbear" = "~=19.3"
+"flake8-docstrings" = "~=1.3"
+"flake8-import-order" = "~=0.18"
+"flake8-string-format" = "~=0.2"
+"flake8-tidy-imports" = "~=2.0"
+"flake8-todo" = "~=0.7"
+"pre-commit" = "~=1.18"
 "pydocstyle" = "<4.0"
-"flake8-bugbear" = "*"
-"flake8-import-order" = "*"
-"flake8-tidy-imports" = "*"
-"flake8-todo" = "*"
-"flake8-string-format" = "*"
-pre-commit = "*"
-flake8-docstrings = "*"
 
 [requires]
-python_version = "3.7"
+python_version = "3.6"
 
 [scripts]
-lint = "flake8"
+lint = "flake8 ast_adventures"
 precommit = "pre-commit install"
