--- a/Pipfile
+++ b/Pipfile
@@ -17,5 +17,5 @@ name = "pypi"
 "pre-commit" = "~=1.18"
 
 [scripts]
-lint = "flake8 ast_adventures"
+lint = "flake8 flake8_type_hinted"
 precommit = "pre-commit install"
