--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -4,6 +4,7 @@ repos:
     hooks:
     - id: flake8
       additional_dependencies: [
+        "flake8-annotations",
         "flake8-bugbear~=19.3",
         "flake8-docstrings~=1.3.1",
         "flake8-import-order~=0.18",
