--- a/Pipfile
+++ b/Pipfile
@@ -5,6 +5,7 @@ name = "pypi"
 
 [packages]
 "flake8" = "~=3.7.8"
+"flake8-annotations" = {path = ".",editable = true}
 
 [dev-packages]
 "flake8-bugbear" = "~=19.3"
