--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,14 +1,10 @@
 repos:
--   repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v2.2.3
+-   repo: local
     hooks:
-    - id: flake8
-      additional_dependencies: [
-        "flake8-annotations",
-        "flake8-bugbear~=19.3",
-        "flake8-docstrings~=1.3.1",
-        "flake8-import-order~=0.18",
-        "flake8-string-format~=0.2",
-        "flake8-tidy-imports~=2.0",
-        "flake8-todo~=0.7",
-      ]
+    -   id: flake8
+        name: Flake8
+        description: This hook runs flake8 within our project's pipenv environment.
+        entry: pipenv run lint
+        language: python
+        types: [python]
+        require_serial: true
