--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -26,7 +26,7 @@ jobs:
   - script: python3 -m pip install setuptools
     displayName: 'Install base dependencies'
 
-  - script: python3 -m pip install pipenv && pipenv install --dev --system && python3 -m pip install flake8-formatter-junit-xml
+  - script: python3 -m pip install pipenv && pipenv install --dev --deploy --system && python3 -m pip install flake8-formatter-junit-xml
     displayName: 'Install Project Environment'
 
   - script: python3 -m flake8 --format junit-xml --output-file test-lint.xml
