Update flake8 exclusions
Change pipenv flake8 script to run in the root directory, mirroring what is done in CI

--- a/Pipfile
+++ b/Pipfile
@@ -19,6 +19,6 @@ flake8-annotations = {path = ".",editable = true}
 "pytest-check" = "~=0.3"
 
 [scripts]
-lint = "flake8 flake8_annotations"
+lint = "flake8"
 precommit = "pre-commit install"
 test = "pytest"
