--- a/Pipfile
+++ b/Pipfile
@@ -4,21 +4,23 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-"flake8" = "~=3.7.8"
+flake8 = "~=3.7.8"
 flake8-annotations = {path = ".",editable = true}
 
 [dev-packages]
-"flake8-bugbear" = "~=19.8"
-"flake8-docstrings" = "~=1.3.1"
-"flake8-import-order" = "~=0.18"
-"flake8-string-format" = "~=0.2"
-"flake8-tidy-imports" = "~=2.0"
-"flake8-todo" = "~=0.7"
-"pre-commit" = "~=1.18"
-"pytest" = "~=5.0"
-"pytest-check" = "~=0.3"
+flake8-bugbear = "~=19.8"
+flake8-docstrings = "~=1.3"
+flake8-import-order = "~=0.18"
+flake8-string-format = "~=0.2"
+flake8-tidy-imports = "~=2.0"
+flake8-todo = "~=0.7"
+pre-commit = "~=1.18"
+pytest = "~=5.0"
+pytest-check = "~=0.3"
+pytest-cov = "~=2.7"
 
 [scripts]
 lint = "flake8"
 precommit = "pre-commit install"
 test = "pytest"
+coverage = "pytest --cov-report term-missing --cov=flake8_annotations"
