Add coverage report to CI

--- a/Pipfile
+++ b/Pipfile
@@ -23,4 +23,4 @@ pytest-cov = "~=2.7"
 lint = "flake8"
 precommit = "pre-commit install"
 test = "pytest"
-coverage = "pytest --cov-report term-missing --cov=flake8_annotations"
+coverage = "pytest --cov=flake8_annotations testing/ --cov-report term-missing"
