Update Azure Pipeline
* Remove flake8 XML output, it's borderline useless  on Azure since you have to click on each error to get the line number
* Add console output for coverage report
* Add condition to testing & coverage so they run even if linting fails

--- a/.gitignore
+++ b/.gitignore
@@ -30,10 +30,12 @@ venv.bak/
 
 # logs
 *.log
+test-*.xml
 
 # Unit test / coverage reports
 .coverage
 .tox
 .coverage.*
 coverage.xml
+cov.xml
 htmlcov
