--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -29,20 +29,23 @@ jobs:
   - script: python3 -m pip install pipenv && pipenv install --dev --deploy --system && python3 -m pip install flake8-formatter-junit-xml
     displayName: 'Install Project Environment'
 
-  - script: python3 -m flake8 --format junit-xml --output-file test-lint.xml
+  - script: python3 -m flake8
     displayName: 'Lint flake8-annotations'
 
   - script: python3 -m pytest --junitxml test-pytest.xml
     displayName: 'Test flake8-annotations'
+    condition: succeededOrFailed()
 
   - task: PublishTestResults@2
+    displayName: 'Publish Test Results'
     condition: succeededOrFailed()
     inputs:
       testResultsFiles: '**/test-*.xml'
-      testRunTitle: 'flake8-annotations Lint & Test Results'
+      testRunTitle: 'flake8-annotations Test Results'
 
-  - script: python3 -m pytest --cov-report xml:cov.xml --cov=flake8_annotations testing/
+  - script: python3 -m pytest --cov-report xml:cov.xml --cov-report term-missing --cov=flake8_annotations testing/
     displayName: 'Generate Coverage Report'
+    condition: succeededOrFailed()
 
   - task: PublishCodeCoverageResults@1
     displayName: 'Publish Coverage Results'
