--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,7 @@ flake8-annotations = {path = ".",editable = true}
 [dev-packages]
 flake8-bugbear = "~=19.8"
 flake8-docstrings = "~=1.4"
+flake8-formatter-junit-xml = "~=0.0"
 flake8-import-order = "~=0.18"
 flake8-string-format = "~=0.2"
 flake8-tidy-imports = "~=2.0"
