Add branch coverage

--- a/Pipfile
+++ b/Pipfile
@@ -24,4 +24,4 @@ pytest-cov = "~=2.7"
 lint = "flake8"
 precommit = "pre-commit install"
 test = "pytest"
-coverage = "pytest --cov=flake8_annotations testing/ --cov-report term-missing"
+coverage = "pytest --cov=flake8_annotations testing/ --cov-branch --cov-report term-missing"
