setuptools fixes and tweaks
- Use python_requires instead of asserting the version. pip will use
python_requires to make an intelligent decision about whether the
package can be installed or what version to install (e.g. if python 3.6
support was dropped in the future, I believe a pip running under 3.6
will install the last version of the package that supported it).
- Remove redundant setup.cfg
- Manually specify packages instead of using find_packages()
- Mark as zip safe (slightly faster wheel builds)
- Add project URLs. These appear on the left side of the PyPI page.

--- a/Pipfile
+++ b/Pipfile
@@ -22,6 +22,7 @@ pytest-cov = "~=2.7"
 
 [scripts]
 lint = "flake8"
+check = "python setup.py --quiet check --metadata --strict"
 precommit = "pre-commit install"
 test = "pytest"
 coverage = "pytest --cov=flake8_annotations testing/ --cov-branch --cov-report term-missing"
