--- a/Pipfile
+++ b/Pipfile
@@ -6,6 +6,7 @@ name = "pypi"
 [packages]
 flake8 = "~=3.7.8"
 flake8-annotations = {path = ".",editable = true}
+typed-ast = "~=1.4"
 
 [dev-packages]
 flake8-bugbear = "~=19.8"
