--- a/Pipfile
+++ b/Pipfile
@@ -5,10 +5,10 @@ name = "pypi"
 
 [packages]
 flake8 = "~=3.7.8"
-flake8-annotations = {path = ".",editable = true}
 typed-ast = "~=1.4"
 
 [dev-packages]
+flake8-annotations = {path = ".",editable = true}
 flake8-bugbear = "~=19.8"
 flake8-docstrings = "~=1.4"
 flake8-formatter-junit-xml = "~=0.0"
@@ -16,6 +16,7 @@ flake8-import-order = "~=0.18"
 flake8-string-format = "~=0.2"
 flake8-tidy-imports = "~=2.0"
 flake8-todo = "~=0.7"
+pipenv-setup = "~=2.1"
 pre-commit = "~=1.18"
 pytest = "~=5.1"
 pytest-check = "~=0.3"
