--- a/tox.ini
+++ b/tox.ini
@@ -20,3 +20,18 @@ exclude=
     testing/*,
     error_codes.py
 import-order-style=pycharm
+
+[tox]
+envlist = py36, py37
+skip_missing_interpreters = true
+minversion = 3.14.0
+
+[testenv]
+description = Run testing for {basepython}
+deps =
+    pytest
+    pytest-check
+    pytest-cov
+commands =
+    python -m pytest {posargs: --cov=flake8_annotations testing/ --cov-branch --cov-report term-missing}
+parallel_show_output = true
