Add 3.8 to tox config, update tests for typed-ast conditional dependency

--- a/tox.ini
+++ b/tox.ini
@@ -22,7 +22,7 @@ exclude=
 import-order-style=pycharm
 
 [tox]
-envlist = py36, py37
+envlist = py36, py37, py38
 skip_missing_interpreters = true
 minversion = 3.14.0
 
