Update tox configuration to combine coverage reports across environments

--- a/tox.ini
+++ b/tox.ini
@@ -21,17 +21,25 @@ exclude=
     error_codes.py
 import-order-style=pycharm
 
+[tool:pytest]
+testpaths = testing/
+addopts =
+    --cov-report=term-missing
+    --cov-branch
+
 [tox]
-envlist = py36, py37, py38
+envlist = clean,py36,py37,py38
 skip_missing_interpreters = true
 minversion = 3.14.0
 
 [testenv]
-description = Run testing for {basepython}
+commands = python3 -m pytest --cov=flake8_annotations --cov-append
 deps =
     pytest
     pytest-check
     pytest-cov
-commands =
-    python -m pytest {posargs: --cov=flake8_annotations testing/ --cov-branch --cov-report term-missing}
-parallel_show_output = true
+
+[testenv:clean]
+deps = coverage
+skip_install = true
+commands = coverage erase
