--- a/tox.ini
+++ b/tox.ini
@@ -18,7 +18,8 @@ exclude=
     venv,.venv,
     build, dist,
     testing/*,
-    error_codes.py
+    error_codes.py,
+    .tox
 import-order-style=pycharm
 
 [tool:pytest]
