Add test suite to coverage
So I don't completely miss tests again

And because it's a super good idea

--- a/Pipfile
+++ b/Pipfile
@@ -28,4 +28,4 @@ lint = "flake8"
 check_metadata = "python setup.py --quiet check --metadata --strict"
 precommit = "pre-commit install"
 test = "tox"
-coverage = "pytest --cov=flake8_annotations testing/ --cov-branch --cov-report term-missing"
+coverage = "pytest --cov=flake8_annotations --cov=testing testing/ --cov-branch --cov-report term-missing"
