--- a/tox.ini
+++ b/tox.ini
@@ -34,7 +34,7 @@ skip_missing_interpreters = true
 minversion = 3.14.0
 
 [testenv]
-commands = python3 -m pytest --cov=flake8_annotations --cov-append --cov-branch --cov-report term-missing
+commands = python3 -m pytest --cov=flake8_annotations --cov=testing --cov-append --cov-branch --cov-report term-missing
 deps =
     pytest
     pytest-check
