--- a/tox.ini
+++ b/tox.ini
@@ -21,11 +21,17 @@ exclude=
     .tox
 import-order-style=pycharm
 
-[tool:pytest]
+[pytest]
 testpaths = testing/
-addopts =
-    --cov-report=term-missing
+junit_family = xunit2
+addopts = 
+    --junitxml=test-pytest.xml
+    --cov-append
     --cov-branch
+    --cov=flake8_annotations
+    --cov=testing
+    --cov-report=xml:cov.xml
+    --cov-report=term-missing 
 
 [tox]
 envlist = clean,py36,py37,py38
@@ -33,7 +39,7 @@ skip_missing_interpreters = true
 minversion = 3.14.0
 
 [testenv]
-commands = python3 -m pytest --cov=flake8_annotations --cov=testing --cov-append --cov-branch --cov-report term-missing
+commands = python3 -m pytest
 deps =
     pytest
     pytest-check
