Adjust Pytest options so Azure picks up on merged coverage report
Closes: #47

--- a/tox.ini
+++ b/tox.ini
@@ -26,12 +26,9 @@ testpaths = testing/
 junit_family = xunit2
 addopts = 
     --junitxml=test-pytest.xml
-    --cov-append
+    --cov=flake8_annotations --cov=testing
     --cov-branch
-    --cov=flake8_annotations
-    --cov=testing
-    --cov-report=xml:cov.xml
-    --cov-report=term-missing 
+    --cov-append --cov-report xml:cov.xml --cov-report term-missing 
 
 [tox]
 envlist = clean,py36,py37,py38
