Relock dependencies & update dependabot config to exclude tox
Add tox to the dependabot exclusions for the same reason as the other ignored dev dependencies: they are already pinned fairly liberally so we don't need to keep up with every minor version.

--- a/.dependabot/config.yml
+++ b/.dependabot/config.yml
@@ -13,3 +13,5 @@ update_configs:
           dependency_name: "pre-commit"
       - match:
           dependency_name: "pytest*"
+      - match:
+          dependency_name: "tox"
