Initial move from pipenv to poetry

--- a/tox.ini
+++ b/tox.ini
@@ -32,8 +32,9 @@ addopts =
 
 [tox]
 envlist = clean,py36,py37,py38
-skip_missing_interpreters = true
+skip_missing_interpreters = True
 minversion = 3.14.0
+isolated_build = True
 
 [testenv]
 commands = python3 -m pytest
