Migrate pre-commit config to poetry

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,8 +3,8 @@ repos:
     hooks:
     -   id: flake8
         name: Flake8
-        description: This hook runs flake8 within our project's pipenv environment.
-        entry: pipenv run lint
+        description: This hook runs flake8 within our project's poetry environment.
+        entry: poetry run flake8
         language: python
         types: [python]
         require_serial: true
