Update Azure config to use flake8 entry point
There appears to be an upstream issue with the entrypoints library (via flake8) that causes the option parser to double register custom flake8 configuration options when invoking as a module vs. the flake8 entrypoint. While the issue is fixed on flake8 master, until a new version is released we can utilize the flake8 entry point to resolve the CI issue.

See: https://gitlab.com/pycqa/flake8/issues/610

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -37,7 +37,7 @@ jobs:
   - script: pipenv-setup check
     displayName: 'Check dependency synchronization'
 
-  - script: python3 -m flake8
+  - script: flake8
     displayName: 'Lint flake8-annotations'
 
   - script: tox -e $(tox.env)
