--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,8 +19,8 @@ jobs:
     - name: Install build dependencies & build
       run: |
         python -m pip install --upgrade pip
-        pip install setuptools wheel
-        python setup.py sdist bdist_wheel
+        pip install poetry
+        poetry build
       
     - name: Publish package
       uses: pypa/gh-action-pypi-publish@v1.0.0a0
