Fix Tox test execution on Windows

--- a/tox.ini
+++ b/tox.ini
@@ -37,7 +37,7 @@ minversion = 3.14.0
 isolated_build = True
 
 [testenv]
-commands = python3 -m pytest
+commands = python -m pytest
 deps =
     pytest
     pytest-check
