Add pep8-naming to linting toolchain

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,6 +41,7 @@ flake8-formatter-junit-xml = "^0.0"
 flake8-import-order = "^0.18"
 flake8-tidy-imports = "^4.0"
 flake8-todo = "^0.7"
+pep8-naming = "^0.9"
 pre-commit = "^2.1"
 pytest = "^5.3"
 pytest-check = "^0.3"
