--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -36,10 +36,19 @@ jobs:
   - script: python3 -m pip install poetry && poetry install
     displayName: 'Install Project Environment'
 
+  - task: Cache@2
+    displayName: 'Restore pre-commit environment'
+    condition: and(succeeded(), eq(variables['python.version'], '3.8'))
+    inputs:
+      key: pre-commit | "$(PythonVersion.pythonLocation)" | .pre-commit-config.yaml
+      restoreKeys: |
+        pre-commit | "$(PythonVersion.pythonLocation)"
+      path: $(PRE_COMMIT_HOME)
+
     # This will also take care of linting, as we utilize a flake8 hook
     # Only run this in one python environment
   - script: pre-commit run --all-files
-    condition: eq(variables['python.version'], '3.8')
+    condition: and(succeeded(), eq(variables['python.version'], '3.8'))
     displayName: 'Run pre-commit hooks'
 
   - script: tox -e $(tox.env)
