Add name to Python Version task so it can be referenced later
Co-Authored-By: Mark <kozlovmark@gmail.com>

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -26,6 +26,7 @@ jobs:
   steps:
   - task: UsePythonVersion@0
     displayName: 'Set Python version'
+    name: PythonVersion
     inputs:
       versionSpec: '$(python.version)'
       addToPath: true
