--- a/.dependabot/config.yml
+++ b/.dependabot/config.yml
@@ -15,3 +15,5 @@ update_configs:
           dependency_name: "pytest*"
       - match:
           dependency_name: "tox"
+      - match:
+          dependency_name: "pep8-naming"
