--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "flake8-annotations"
-version = "2.2.0"
+version = "2.2.1"
 description = "Flake8 Type Annotation Checks"
 license = "MIT"
 readme = "README.md"
@@ -29,7 +29,7 @@ include = ["CHANGELOG.md"]
 "Discord Server" = "https://discord.gg/python"
 
 [tool.poetry.dependencies]
-python = ">=3.6.1,<3.9"
+python = "^3.6.1"
 flake8 = "^3.7, <3.9"
 typed-ast = {version="^1.4,<2.0", python="<3.8"}
 
