--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,9 +4,9 @@ version = "2.3.0"
 description = "Flake8 Type Annotation Checks"
 license = "MIT"
 readme = "README.md"
-authors = ["Python Discord <staff@pythondiscord.com>"]
-homepage = "https://pythondiscord.com/"
-repository = "https://github.com/python-discord/flake8-annotations"
+authors = ["S Co1 <sco1.git@gmail.com>"]
+homepage = "https://github.com/sco1/flake8-annotations"
+repository = "https://github.com/sco1/flake8-annotations"
 classifiers = [
     "Framework :: Flake8",
     "Environment :: Console",
@@ -25,8 +25,7 @@ classifiers = [
 include = ["CHANGELOG.md"]
 
 [tool.poetry.urls]
-"Issue Tracker" = "https://github.com/python-discord/flake8-annotations/issues"
-"Discord Server" = "https://discord.gg/python"
+"Issue Tracker" = "https://github.com/sco1/flake8-annotations/issues"
 
 [tool.poetry.dependencies]
 python = "^3.6.1"
