Test GHA lint & test workflows

--- a/tox.ini
+++ b/tox.ini
@@ -50,3 +50,10 @@ deps =
 deps = coverage
 skip_install = true
 commands = coverage erase
+
+[gh-actions]  # For tox GHA
+python =
+  3.6: py36
+  3.7: py37
+  3.8: py38
+  3.9: py39
