--- a/tox.ini
+++ b/tox.ini
@@ -33,7 +33,7 @@ addopts =
     --cov-append --cov-report xml:cov.xml --cov-report term-missing 
 
 [tox]
-envlist = clean,py36,py37,py38,py39
+envlist = clean,py36,py37,py38,py39,py310
 skip_missing_interpreters = True
 minversion = 3.14.0
 isolated_build = True
@@ -57,3 +57,4 @@ python =
   3.7: py37
   3.8: py38
   3.9: py39
+  3.10: py310
