--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,12 +32,12 @@ include = ["CHANGELOG.md"]
 "Issue Tracker" = "https://github.com/sco1/flake8-annotations/issues"
 
 [tool.poetry.dependencies]
-python = "^3.6.1"
+python = "^3.6.2"
 flake8 = "^3.7"
 typed-ast = {version="^1.4,<2.0", python="<3.8"}
 
 [tool.poetry.dev-dependencies]
-black = {version = "^20.8b1"}
+black = "^21.5b0"
 bump2version = "^1.0"
 flake8-bugbear = "^21.3"
 flake8-docstrings = "^1.5"
