--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -12,7 +12,7 @@ repos:
         types: [python]
         require_serial: true
   - repo: https://github.com/psf/black
-    rev: 21.5b0
+    rev: 21.5b1
     hooks:
       - id: black
   - repo: https://github.com/pre-commit/pre-commit-hooks
@@ -27,3 +27,8 @@ repos:
     rev: v1.8.0
     hooks:
     -   id: python-check-blanket-noqa
+  - repo: https://github.com/pre-commit/mirrors-mypy
+    rev: v0.812
+    hooks:
+      - id: mypy
+        files: ^flake8_annotations/
