Move mypy to GHA, bump version, move config to pyproject.toml
Add expilcit codes to `# type: ignore` annotations

--- a/.github/workflows/lint_test.yml
+++ b/.github/workflows/lint_test.yml
@@ -24,7 +24,10 @@ jobs:
         poetry install
 
     - name: Run flake8
-      run: poetry run flake8
+      run: poetry run flake8 .
+
+    - name: Run mypy
+      run: poetry run mypy .
 
   test:
     runs-on: ubuntu-latest
