--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,13 +45,14 @@ flake8-fixme = "^1.1"
 flake8-formatter-junit-xml = "^0.0"
 flake8-import-order = "^0.18"
 flake8-tidy-imports = "^4.1"
-mypy = "^0.812"
+mypy = "^0.901"
 pep8-naming = "^0.11"
 pre-commit = "^2.7"
 pytest = "^6.0"
 pytest-check = "^1.0"
 pytest-cov = "^2.10"
 tox = "^3.19"
+types-typed-ast = "^1.4"
 
 [tool.poetry.plugins]
 [tool.poetry.plugins."flake8.extension"]
@@ -60,6 +61,19 @@ tox = "^3.19"
 [tool.black]
 line-length = 100
 
+[tool.mypy]
+disallow_incomplete_defs = true
+disallow_untyped_calls = true
+disallow_untyped_decorators = true
+disallow_untyped_defs = true
+ignore_missing_imports = true
+no_implicit_optional = true
+show_error_codes = true
+warn_redundant_casts = true
+warn_return_any = true
+warn_unused_configs = true
+warn_unused_ignores = true
+
 [build-system]
-requires = ["poetry>=0.12"]
+requires = ["poetry>=1.0"]
 build-backend = "poetry.masonry.api"
