--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,7 +45,7 @@ flake8-fixme = "^1.1"
 flake8-formatter-junit-xml = "^0.0"
 flake8-import-order = "^0.18"
 flake8-tidy-imports = "^4.1"
-mypy = "^0.901"
+mypy = "^0.902"
 pep8-naming = "^0.11"
 pre-commit = "^2.7"
 pytest = "^6.0"
@@ -62,6 +62,7 @@ types-typed-ast = "^1.4"
 line-length = 100
 
 [tool.mypy]
+exclude = "^testing/"
 disallow_incomplete_defs = true
 disallow_untyped_calls = true
 disallow_untyped_decorators = true
