--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,14 +40,15 @@ flake8 = "^3.7"
 typed-ast = {version="^1.4,<2.0", python="<3.8"}
 
 [tool.poetry.dev-dependencies]
-black = "^21.6b0"
+black = "^21.7b0"
 bump2version = "^1.0"
 flake8-bugbear = "^21.4"
 flake8-docstrings = "^1.6"
 flake8-fixme = "^1.1"
 flake8-formatter-junit-xml = "^0.0"
 flake8-import-order = "^0.18"
-flake8-tidy-imports = "^4.3"
+flake8-tidy-imports = "^4.4"
+isort = "^5.9"
 mypy = "^0.910"
 pep8-naming = "^0.12"
 pre-commit = "^2.13"
@@ -63,6 +64,13 @@ types-typed-ast = "^1.4"
 
 [tool.black]
 line-length = 100
+
+[tool.isort]
+case_sensitive = true
+known_first_party = "flake8-annotations,testing"
+no_lines_before = "LOCALFOLDER"
+order_by_type = false
+profile = "black"
 
 [tool.mypy]
 exclude = "^testing/"
