--- a/tox.ini
+++ b/tox.ini
@@ -22,6 +22,7 @@ exclude=
     error_codes.py,
     .tox
 import-order-style=pycharm
+application-import-names=flake8_annotations,testing
 
 [pytest]
 testpaths = testing/
