--- a/.github/workflows/pypi_release.yml
+++ b/.github/workflows/pypi_release.yml
@@ -23,7 +23,7 @@ jobs:
         poetry build
       
     - name: Publish package
-      uses: pypa/gh-action-pypi-publish@v1.0.0a0
+      uses: pypa/gh-action-pypi-publish@release/v1.4
       with:
         user: __token__
         password: ${{ secrets.pypi_api_token }}
