--- a/tox.ini
+++ b/tox.ini
@@ -34,7 +34,7 @@ addopts =
     --cov-append --cov-report xml:cov.xml --cov-report term-missing 
 
 [tox]
-envlist = clean,py36,py37,py38,py39,py310
+envlist = clean,py36,py37,py38,py39,py310,py311
 skip_missing_interpreters = True
 minversion = 3.14.0
 isolated_build = True
@@ -59,3 +59,4 @@ python =
   3.8: py38
   3.9: py39
   3.10: py310
+  3.11: py311
