Drop explicit support for Python 3.6
Per PEP 494 it's now EOL, toodles!
https://www.python.org/dev/peps/pep-0494/

--- a/tox.ini
+++ b/tox.ini
@@ -34,7 +34,7 @@ addopts =
     --cov-append --cov-report xml:cov.xml --cov-report term-missing 
 
 [tox]
-envlist = clean,py36,py37,py38,py39,py310,py311
+envlist = clean,py37,py38,py39,py310,py311
 skip_missing_interpreters = True
 minversion = 3.14.0
 isolated_build = True
@@ -54,7 +54,6 @@ commands = coverage erase
 
 [gh-actions]  # For tox GHA
 python =
-  3.6: py36
   3.7: py37
   3.8: py38
   3.9: py39
