The `Enum` `repr` change is back!
Put back the conditional `repr` formatting for our enums in Python `>= 3.11`

https://bugs.python.org/issue44559
https://bugs.python.org/issue40066

See: 08a2c464d49b63a73311da3fa6dd841a612f737d
See: 74404255a8a9e81b321c238f25b7621304674c97

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,18 +39,18 @@ flake8 = ">=3.7, <5.0"
 typed-ast = {version="^1.4,<2.0", python="<3.8"}
 
 [tool.poetry.dev-dependencies]
-black = "^21.7b0"
+black = "^22.1"
 bump2version = "^1.0"
-flake8-bugbear = "^21.4"
+flake8-bugbear = "^22.0"
 flake8-docstrings = "^1.6"
 flake8-fixme = "^1.1"
 flake8-formatter-junit-xml = "^0.0"
 flake8-import-order = "^0.18"
 isort = "^5.9"
-mypy = "^0.930"
+mypy = "^0.931"
 pep8-naming = "^0.12"
 pre-commit = "^2.13"
-pytest = "^6.2"
+pytest = "^7.0"
 pytest-check = "^1.0"
 pytest-cov = "^3.0"
 tox = "^3.23"
