Use cog for README bash block

--- a/tox.ini
+++ b/tox.ini
@@ -34,7 +34,7 @@ addopts =
     --cov-append --cov-report xml:cov.xml --cov-report term-missing 
 
 [tox]
-envlist = clean,py37,py38,py39,py310,py311
+envlist = clean,py{37,38,39,310,311},cog
 skip_missing_interpreters = True
 minversion = 3.14.0
 isolated_build = True
@@ -51,6 +51,10 @@ deps =
 deps = coverage
 skip_install = true
 commands = coverage erase
+
+[testenv:cog]
+commands = cog -r README.md
+deps = cogapp
 
 [gh-actions]  # For tox GHA
 python =
