--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,6 +41,7 @@ typed-ast = {version="^1.4,<2.0", python="<3.8"}
 [tool.poetry.dev-dependencies]
 black = "^22.1"
 bump2version = "^1.0"
+cogapp = "^3.3"
 flake8-bugbear = "^22.0"
 flake8-docstrings = "^1.6"
 flake8-fixme = "^1.1"
