--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,7 +35,7 @@ include = [
 
 [tool.poetry.dependencies]
 python = "^3.7"
-flake8 = ">=3.7, <5.0"
+flake8 = ">=3.7"
 typed-ast = {version="^1.4,<2.0", python="<3.8"}
 
 [tool.poetry.dev-dependencies]
@@ -46,8 +46,9 @@ flake8-bugbear = "^22.0"
 flake8-docstrings = "^1.6"
 flake8-fixme = "^1.1"
 flake8-formatter-junit-xml = "^0.0"
+flake8-type-checking = {version="^1.3", python=">=3.8,<4.0"}
 isort = "^5.9"
-mypy = "^0.931"
+mypy = "^0.941"
 pep8-naming = "^0.12"
 pre-commit = "^2.13"
 pytest = "^7.0"
@@ -85,5 +86,5 @@ warn_unused_configs = true
 warn_unused_ignores = true
 
 [build-system]
-requires = ["poetry>=1.0"]
-build-backend = "poetry.masonry.api"
+requires = ["poetry-core>=1.0.8"]
+build-backend = "poetry.core.masonry.api"
