--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,7 @@ include = [
 
 [tool.poetry.dependencies]
 python = "^3.7"
+attrs = "^21.4"
 flake8 = ">=3.7"
 typed-ast = {version="^1.4,<2.0", python="<3.8"}
 
