Clean up internal flake8 warnings

--- a/tox.ini
+++ b/tox.ini
@@ -59,7 +59,10 @@ commands = coverage erase
 
 [testenv:cog]
 commands = cog -r README.md
-deps = cogapp
+deps =
+    cogapp
+    attrs
+    flake8
 
 [gh-actions]  # For tox GHA
 python =
