--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,23 +40,24 @@ flake8 = ">=3.7"
 typed-ast = {version="^1.4,<2.0", python="<3.8"}
 
 [tool.poetry.dev-dependencies]
-black = "^22.1"
+black = "^22.3"
 bump2version = "^1.0"
 cogapp = "^3.3"
-flake8-bugbear = "^22.0"
+flake8-bugbear = "^22.4"
 flake8-docstrings = "^1.6"
 flake8-fixme = "^1.1"
 flake8-formatter-junit-xml = "^0.0"
-flake8-type-checking = {version="^1.3", python=">=3.8,<4.0"}
-isort = "^5.9"
-mypy = "^0.942"
+flake8-type-checking = {version="^1.5", python=">=3.8,<4.0"}
+isort = "^5.10"
+mypy = "^0.960"
 pep8-naming = "^0.12"
-pre-commit = "^2.13"
-pytest = "^7.0"
+pre-commit = "^2.18"
+pytest = "^7.1"
 pytest-check = "^1.0"
 pytest-cov = "^3.0"
-tox = "^3.23"
-types-typed-ast = "^1.4"
+pytest-randomly = "^3.12"
+tox = "^3.25"
+types-typed-ast = "^1.5"
 
 [tool.poetry.plugins]
 [tool.poetry.plugins."flake8.extension"]
