--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -2,6 +2,10 @@
 current_version = 2.9.1
 commit = False
 
+[bumpversion:file:README.md]
+search = flake8-annotations/{current_version}
+replace = flake8-annotations/{new_version}
+
 [bumpversion:file:pyproject.toml]
 search = version = "{current_version}"
 replace = version = "{new_version}"
