--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ classifiers = [
     "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
     "Programming Language :: Python :: 3 :: Only",
     "Topic :: Software Development :: Libraries :: Python Modules",
     "Topic :: Software Development :: Quality Assurance",
@@ -41,7 +42,7 @@ flake8 = ">=3.7"
 typed-ast = {version="^1.4,<2.0", python="<3.8"}
 
 [tool.poetry.dev-dependencies]
-black = "^22.8"
+black = "^22.12"
 bump2version = "^1.0"
 cogapp = "^3.3"
 flake8-bugbear = "^22.9"
@@ -49,17 +50,17 @@ flake8-docstrings = "^1.6"
 flake8-fixme = "^1.1"
 flake8-formatter-junit-xml = "^0.0"
 flake8-type-checking = {version="^2.0", python=">=3.8,<4.0"}
-importlib-metadata = {version="^4.0", python="<3.8"}
-isort = "^5.10"
-mypy = "^0.981"
+importlib-metadata = {version="^5.0", python="<3.8"}
+isort = "^5.11"
+mypy = "^0.991"
 packaging = ">=21"
-pep8-naming = "^0.12"
+pep8-naming = "^0.13"
 pre-commit = "^2.18"
 pytest = "^7.1"
 pytest-check = "^1.0"
 pytest-cov = "^4.0"
 pytest-randomly = "^3.12"
-tox = "^3.26"
+tox = "^4.0"
 types-typed-ast = "^1.5"
 
 [tool.poetry.plugins]
