--- a/tox.ini
+++ b/tox.ini
@@ -1,13 +1,11 @@
 [pytest]
 testpaths = testing/
-junit_family = xunit2
 addopts =
-    --junitxml=test-pytest.xml
-    --cov=flake8_annotations --cov=testing
-    --cov-append --cov-report xml:cov.xml --cov-report term-missing
-
-[coverage:run]
-branch = True
+    --cov=flake8_annotations
+    --cov=testing
+    --cov-branch
+    --cov-append
+    --cov-report term-missing:skip-covered
 
 [coverage:report]
 exclude_lines =
