--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,7 +35,7 @@ include = [
 "Issue Tracker" = "https://github.com/sco1/flake8-annotations/issues"
 
 [tool.poetry.dependencies]
-python = "^3.8.1"
+python = ">=3.8.1"
 attrs = ">=21.4"
 flake8 = ">=5.0"
 
