--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "flake8-annotations"
-version = "3.0.0"
+version = "3.0.1"
 description = "Flake8 Type Annotation Checks"
 license = "MIT"
 readme = "README.md"
@@ -54,7 +54,7 @@ pytest = "^7.2"
 pytest-check = "^2.0"
 pytest-cov = "^4.0"
 pytest-randomly = "^3.12"
-tox = "^4.4"
+tox = { version = "^4.4", python = "<4.0" }
 
 [tool.poetry.plugins]
 [tool.poetry.plugins."flake8.extension"]
