Add dev python to CI

--- a/.github/workflows/lint_test.yml
+++ b/.github/workflows/lint_test.yml
@@ -14,34 +14,48 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+    - name: Install Poetry for caching
+      run: pipx install poetry
     - name: Set up Python
       uses: actions/setup-python@v4
       with:
         python-version: '3.x'
+        cache: 'poetry'
 
     - name: Install dependencies
       run: |
         python -m pip install -U pip setuptools importlib-metadata
-        pip install poetry
         poetry install
 
     - name: Run flake8
-      run: poetry run flake8 .
+      run: poetry run flake8
 
     - name: Run mypy
       run: poetry run mypy .
+      if: always()
 
   test:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ["3.8", "3.9", "3.10", "3.11"]
+        python-version: ["3.8", "3.9", "3.10", "3.11", "3.12-dev"]
       fail-fast: false
 
     steps:
     - uses: actions/checkout@v3
-    - name: Set up Python ${{ matrix.python-version }}
+    - name: Install Poetry for caching
+      run: pipx install poetry
+
+    - name: Set up (release) Python ${{ matrix.python-version }}
       uses: actions/setup-python@v4
+      if: "!endsWith(matrix.python-version, '-dev')"
+      with:
+        python-version: ${{ matrix.python-version }}
+        cache: 'poetry'
+
+    - name: Set up (deadsnakes) Python ${{ matrix.python-version }}
+      uses: deadsnakes/action@v3.0.0
+      if: endsWith(matrix.python-version, '-dev')
       with:
         python-version: ${{ matrix.python-version }}
 
