--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -4,7 +4,7 @@ ci:
 
 repos:
   - repo: https://github.com/psf/black
-    rev: 24.1.1
+    rev: 24.3.0
     hooks:
       - id: black
   - repo: https://github.com/pycqa/isort
@@ -25,10 +25,14 @@ repos:
     hooks:
       - id: python-check-blanket-noqa
       - id: python-check-blanket-type-ignore
+  - repo: https://github.com/astral-sh/ruff-pre-commit
+    rev: v0.3.3
+    hooks:
+      - id: ruff
   - repo: local
     hooks:
       - id: flake8
-        name: Flake8
+        name: flake8-local
         description: This hook runs flake8 within our project's poetry environment.
         entry: poetry run flake8
         language: python
