--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,20 +41,17 @@ attrs = ">=21.4"
 flake8 = ">=5.0"
 
 [tool.poetry.dev-dependencies]
-black = "^23.1"
+black = "^24.1"
 bump2version = "^1.0"
 cogapp = "^3.3"
-flake8-bugbear = "^23.1"
-flake8-docstrings = "^1.7"
-flake8-fixme = "^1.1"
 isort = "^5.10"
 mypy = "^1.0"
-pep8-naming = "^0.13"
 pre-commit = "^3.0"
-pytest = "^7.2"
+pytest = "^8.0"
 pytest-check = "^2.0"
 pytest-cov = "^4.0"
 pytest-randomly = "^3.12"
+ruff = "^0.2"
 tox = { version = "^4.4", python = "<4.0" }
 
 [tool.poetry.plugins]
