Fix coverage cache in GHA

--- a/.github/workflows/lint_test.yml
+++ b/.github/workflows/lint_test.yml
@@ -13,11 +13,11 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
     - name: Install Poetry for caching
       run: pipx install poetry
     - name: Set up Python
-      uses: actions/setup-python@v4
+      uses: actions/setup-python@v5
       with:
         python-version: '3.x'
         cache: 'poetry'
@@ -42,19 +42,19 @@ jobs:
       fail-fast: false
 
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
     - name: Install Poetry for caching
       run: pipx install poetry
 
     - name: Set up (release) Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v4
+      uses: actions/setup-python@v5
       if: "!endsWith(matrix.python-version, '-dev')"
       with:
         python-version: ${{ matrix.python-version }}
         cache: 'poetry'
 
     - name: Set up (deadsnakes) Python ${{ matrix.python-version }}
-      uses: deadsnakes/action@v3.0.0
+      uses: deadsnakes/action@v3.1.0
       if: endsWith(matrix.python-version, '-dev')
       with:
         python-version: ${{ matrix.python-version }}
@@ -68,24 +68,26 @@ jobs:
       run: tox
 
     - name: Cache coverage for ${{ matrix.python-version }}
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v4
       with:
         name: cov_py${{ matrix.python-version }}
         path: .coverage
+        if-no-files-found: error
+        include-hidden-files: true
 
   combine-cov:
     runs-on: ubuntu-latest
     needs: test
 
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
     - name: Set up Python
-      uses: actions/setup-python@v4
+      uses: actions/setup-python@v5
       with:
         python-version: '3.x'
 
     - name: Pull coverage workflow artifacts
-      uses: actions/download-artifact@v3
+      uses: actions/download-artifact@v4
       with:
         path: cov_cache/
 
@@ -103,7 +105,7 @@ jobs:
         coverage html
 
     - name: Publish cov HTML
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v4
       with:
         path: htmlcov/
         name: cov_report_html
