Swap build to uv, publishing to trusted publisher

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,12 +1,15 @@
-[tool.poetry]
+[project]
 name = "flake8-annotations"
 version = "3.1.1"
 description = "Flake8 Type Annotation Checks"
-license = "MIT"
+authors = [
+    {name = "sco1", email = "sco1.git@gmail.com"}
+]
+maintainers = [
+    {name = "sco1", email = "sco1.git@gmail.com"}
+]
+
 readme = "README.md"
-authors = ["S Co1 <sco1.git@gmail.com>"]
-homepage = "https://github.com/sco1/flake8-annotations"
-repository = "https://github.com/sco1/flake8-annotations"
 classifiers = [
     "Framework :: Flake8",
     "Environment :: Console",
@@ -27,35 +30,38 @@ classifiers = [
     "Typing :: Typed",
 ]
 
-include = [
-    {path = "./CHANGELOG.md", format = "sdist"}
+requires-python = ">=3.9"
+dependencies = [
+    "attrs~=21.4",
+    "flake8>=5.0",
 ]
 
-[tool.poetry.urls]
-"Issue Tracker" = "https://github.com/sco1/flake8-annotations/issues"
+[project.urls]
+Homepage = "https://github.com/sco1/"
+Documentation = "https://github.com/sco1/flake8-annotations/blob/main/README.md"
+Repository = "https://github.com/sco1/flake8-annotations"
+Issues = "https://github.com/sco1/flake8-annotations/issues"
+Changelog = "https://github.com/sco1/flake8-annotations/blob/main/CHANGELOG.md"
 
-[tool.poetry.dependencies]
-python = ">=3.9"
-attrs = ">=21.4"
-flake8 = ">=5.0"
-
-[tool.poetry.dev-dependencies]
-black = "^24.3"
-bump2version = "^1.0"
-cogapp = "^3.3"
-isort = "^5.10"
-mypy = "^1.0"
-pre-commit = "^3.0"
-pytest = "^8.0"
-pytest-check = "^2.0"
-pytest-cov = "^5.0"
-pytest-randomly = "^3.12"
-ruff = "^0.6"
-tox = { version = "^4.4", python = "<4.0" }
-
-[tool.poetry.plugins]
-[tool.poetry.plugins."flake8.extension"]
+[project.entry-points."flake8.extension"]
 "ANN" = "flake8_annotations.checker:TypeHintChecker"
+
+[tool.uv]
+dev-dependencies = [
+    "black~=24.10",
+    "bump2version~=1.0",
+    "cogapp~=3.3",
+    "isort~=5.13",
+    "mypy~=1.11",
+    "pre-commit~=4.0",
+    "pytest~=8.3",
+    "pytest-check~=2.4",
+    "pytest-cov~=5.0",
+    "pytest-randomly~=3.15",
+    "ruff~=0.6",
+    "tox~=4.18",
+    "tox-uv~=1.11",
+]
 
 [tool.black]
 line-length = 100
@@ -66,6 +72,7 @@ known_first_party = "flake8-annotations,testing"
 no_lines_before = "LOCALFOLDER"
 order_by_type = false
 profile = "black"
+line_length = 100
 
 [tool.mypy]
 exclude = "^testing/"
@@ -82,5 +89,5 @@ warn_unused_configs = true
 warn_unused_ignores = true
 
 [build-system]
-requires = ["poetry-core>=1.2"]
-build-backend = "poetry.core.masonry.api"
+requires = ["hatchling"]
+build-backend = "hatchling.build"
