--- a/.github/workflows/lint_test.yml
+++ b/.github/workflows/lint_test.yml
@@ -12,27 +12,38 @@ jobs:
   lint:
     runs-on: ubuntu-latest
 
+    env:
+      UV_CACHE_DIR: /tmp/.uv-cache
+
     steps:
     - uses: actions/checkout@v4
-    - name: Install Poetry for caching
-      run: pipx install poetry
+
+    - name: Set up uv
+      run: curl -LsSf https://astral.sh/uv/0.4.20/install.sh | sh
+
     - name: Set up Python
       uses: actions/setup-python@v5
       with:
-        python-version: '3.x'
-        cache: 'poetry'
+        python-version-file: "pyproject.toml"
+
+    - name: Restore uv cache
+      uses: actions/cache@v4
+      with:
+        path: /tmp/.uv-cache
+        key: uv-${{ runner.os }}-${{ hashFiles('uv.lock') }}
+        restore-keys: |
+          uv-${{ runner.os }}-${{ hashFiles('uv.lock') }}
+          uv-${{ runner.os }}
 
     - name: Install dependencies
-      run: |
-        python -m pip install -U pip setuptools importlib-metadata
-        poetry install
-
-    - name: Run flake8
-      run: poetry run flake8
+      run: uv sync --all-extras --dev
 
     - name: Run mypy
-      run: poetry run mypy .
+      run: uv run mypy .
       if: always()
+
+    - name: Minimize uv cache
+      run: uv cache prune --ci
 
   test:
     runs-on: ubuntu-latest
@@ -41,17 +52,20 @@ jobs:
         python-version: ["3.9", "3.10", "3.11", "3.12", "3.13-dev"]
       fail-fast: false
 
+    env:
+      UV_CACHE_DIR: /tmp/.uv-cache
+
     steps:
     - uses: actions/checkout@v4
-    - name: Install Poetry for caching
-      run: pipx install poetry
+
+    - name: Set up uv
+      run: curl -LsSf https://astral.sh/uv/0.4.20/install.sh | sh
 
     - name: Set up (release) Python ${{ matrix.python-version }}
       uses: actions/setup-python@v5
       if: "!endsWith(matrix.python-version, '-dev')"
       with:
         python-version: ${{ matrix.python-version }}
-        cache: 'poetry'
 
     - name: Set up (deadsnakes) Python ${{ matrix.python-version }}
       uses: deadsnakes/action@v3.1.0
@@ -59,13 +73,22 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
 
+    - name: Restore uv cache
+      uses: actions/cache@v4
+      with:
+        path: /tmp/.uv-cache
+        key: uv-${{ runner.os }}-${{ hashFiles('uv.lock') }}
+        restore-keys: |
+          uv-${{ runner.os }}-${{ hashFiles('uv.lock') }}
+          uv-${{ runner.os }}
+
     - name: Install dependencies
       run: |
-        python -m pip install -U pip setuptools importlib-metadata
-        pip install tox-gh-actions
+        uv venv
+        uv pip install tox-gh-actions tox-uv
 
     - name: Run tests w/tox
-      run: tox
+      run: uv run tox
 
     - name: Cache coverage for ${{ matrix.python-version }}
       uses: actions/upload-artifact@v4
@@ -75,16 +98,20 @@ jobs:
         if-no-files-found: error
         include-hidden-files: true
 
+    - name: Minimize uv cache
+      run: uv cache prune --ci
+
   combine-cov:
     runs-on: ubuntu-latest
     needs: test
 
     steps:
     - uses: actions/checkout@v4
+
     - name: Set up Python
       uses: actions/setup-python@v5
       with:
-        python-version: '3.x'
+        python-version-file: "pyproject.toml"
 
     - name: Pull coverage workflow artifacts
       uses: actions/download-artifact@v4
@@ -93,16 +120,16 @@ jobs:
 
     - name: Install cov & combine
       run: |
-        pip install coverage
+        python -m pip install coverage
         coverage combine ./cov_cache/**/.coverage
 
     - name: Report coverage
       run: |
-        echo '**Combined Coverage**' >> $GITHUB_STEP_SUMMARY
-        echo '```' >> $GITHUB_STEP_SUMMARY
-        coverage report -m --skip-covered >> $GITHUB_STEP_SUMMARY
-        echo '```' >> $GITHUB_STEP_SUMMARY
         coverage html
+
+        # Report a markdown version to the action summary
+        echo '**Combined Coverage**' >> $GITHUB_STEP_SUMMARY
+        coverage report --format=markdown >> $GITHUB_STEP_SUMMARY
 
     - name: Publish cov HTML
       uses: actions/upload-artifact@v4
