--- a/.github/workflows/pypi_release.yml
+++ b/.github/workflows/pypi_release.yml
@@ -8,25 +8,31 @@ jobs:
   build:
     name: Build dist & publish
     runs-on: ubuntu-latest
-    
+    environment:
+      name: pypi
+      url: https://pypi.org/p/flake8-annotations
+    permissions:
+      contents: write
+      id-token: write
+
     steps:
     - uses: actions/checkout@v4
+
+    - name: Set up uv
+      run: curl -LsSf https://astral.sh/uv/0.4.20/install.sh | sh
+
     - name: Set up Python
       uses: actions/setup-python@v5
       with:
-        python-version: '3.x'
+        python-version-file: "pyproject.toml"
 
-    - name: Install build dependencies & build
-      run: |
-        python -m pip install --upgrade pip
-        pip install poetry
-        poetry build
-      
+    - name: Build package
+      run: uvx --from build pyproject-build --installer uv
+
     - name: Publish to PyPI
-      uses: pypa/gh-action-pypi-publish@release/v1.9
+      uses: pypa/gh-action-pypi-publish@release/v1.10
       with:
-        user: __token__
-        password: ${{ secrets.pypi_api_token }}
+        print-hash: true
 
     - name: Upload wheel to release
       env:
