--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -34,8 +34,8 @@ repos:
     hooks:
       - id: flake8
         name: flake8-local
-        description: This hook runs flake8 within our project's poetry environment.
-        entry: poetry run flake8
+        description: This hook runs flake8 within our project's uv environment.
+        entry: uv run flake8
         language: python
         types: [python]
         require_serial: true
