--- a/.github/workflows/lint_test.yml
+++ b/.github/workflows/lint_test.yml
@@ -19,7 +19,7 @@ jobs:
     - uses: actions/checkout@v4
 
     - name: Set up uv
-      run: curl -LsSf https://astral.sh/uv/0.4.20/install.sh | sh
+      run: curl -LsSf https://astral.sh/uv/0.4.30/install.sh | sh
 
     - name: Set up Python
       uses: actions/setup-python@v5
@@ -49,7 +49,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ["3.9", "3.10", "3.11", "3.12", "3.13-dev"]
+        python-version: ["3.9", "3.10", "3.11", "3.12", "3.13"]
       fail-fast: false
 
     env:
@@ -59,7 +59,7 @@ jobs:
     - uses: actions/checkout@v4
 
     - name: Set up uv
-      run: curl -LsSf https://astral.sh/uv/0.4.20/install.sh | sh
+      run: curl -LsSf https://astral.sh/uv/0.4.30/install.sh | sh
 
     - name: Set up (release) Python ${{ matrix.python-version }}
       uses: actions/setup-python@v5
