--- a/.github/workflows/lint_test.yml
+++ b/.github/workflows/lint_test.yml
@@ -12,28 +12,20 @@ jobs:
   lint:
     runs-on: ubuntu-latest
 
-    env:
-      UV_CACHE_DIR: /tmp/.uv-cache
-
     steps:
     - uses: actions/checkout@v4
 
-    - name: Set up uv
-      run: curl -LsSf https://astral.sh/uv/0.4.30/install.sh | sh
+    - name: Install uv
+      uses: astral-sh/setup-uv@v3
+      with:
+        version: "0.5.x"
+        enable-cache: true
+        cache-dependency-glob: "uv.lock"
 
     - name: Set up Python
       uses: actions/setup-python@v5
       with:
         python-version-file: "pyproject.toml"
-
-    - name: Restore uv cache
-      uses: actions/cache@v4
-      with:
-        path: /tmp/.uv-cache
-        key: uv-${{ runner.os }}-${{ hashFiles('uv.lock') }}
-        restore-keys: |
-          uv-${{ runner.os }}-${{ hashFiles('uv.lock') }}
-          uv-${{ runner.os }}
 
     - name: Install dependencies
       run: uv sync --all-extras --dev
@@ -42,9 +34,6 @@ jobs:
       run: uv run mypy .
       if: always()
 
-    - name: Minimize uv cache
-      run: uv cache prune --ci
-
   test:
     runs-on: ubuntu-latest
     strategy:
@@ -52,14 +41,15 @@ jobs:
         python-version: ["3.9", "3.10", "3.11", "3.12", "3.13"]
       fail-fast: false
 
-    env:
-      UV_CACHE_DIR: /tmp/.uv-cache
-
     steps:
     - uses: actions/checkout@v4
 
-    - name: Set up uv
-      run: curl -LsSf https://astral.sh/uv/0.4.30/install.sh | sh
+    - name: Install uv
+      uses: astral-sh/setup-uv@v3
+      with:
+        version: "0.5.x"
+        enable-cache: true
+        cache-dependency-glob: "uv.lock"
 
     - name: Set up (release) Python ${{ matrix.python-version }}
       uses: actions/setup-python@v5
@@ -72,15 +62,6 @@ jobs:
       if: endsWith(matrix.python-version, '-dev')
       with:
         python-version: ${{ matrix.python-version }}
-
-    - name: Restore uv cache
-      uses: actions/cache@v4
-      with:
-        path: /tmp/.uv-cache
-        key: uv-${{ runner.os }}-${{ hashFiles('uv.lock') }}
-        restore-keys: |
-          uv-${{ runner.os }}-${{ hashFiles('uv.lock') }}
-          uv-${{ runner.os }}
 
     - name: Install dependencies
       run: |
@@ -97,9 +78,6 @@ jobs:
         path: .coverage
         if-no-files-found: error
         include-hidden-files: true
-
-    - name: Minimize uv cache
-      run: uv cache prune --ci
 
   combine-cov:
     runs-on: ubuntu-latest
