--- a/.ruff.toml
+++ b/.ruff.toml
@@ -10,10 +10,14 @@ extend-exclude = [
 
 [lint]
 select = [
-    "B",  # flake8-bugbear
+    "B",    # flake8-bugbear
+    "C4",   # flake8-comprehensions
+    "D",    # pydocstyle/flake8-docstrings
+    "E",    # pycodestyle
+    "F",    # Pyflakes
     "FIX",  # flake8-fixme
-    "D",  # pydocstyle/flake8-docstrings
-    "N",  # pep8-naming
+    "N",    # pep8-naming
+    "W",    # pycodestyle
 ]
 
 ignore = [
@@ -52,4 +56,5 @@ ignore = [
 [lint.per-file-ignores]
 "testing/test_*.py" = [
     "D103",
+    "E501",
 ]
