Drop Python 3.9 & attrs

--- a/tox.ini
+++ b/tox.ini
@@ -15,10 +15,11 @@ exclude_lines =
     if TYPE_CHECKING:
 
 [tox]
-envlist = clean,py{39,310,311,312,313,314},cog
+envlist = clean,py{3.10,3.11,3.12,3.13,3.14},cog
 skip_missing_interpreters = True
-minversion = 4.0.0
 isolated_build = True
+requires =
+    tox >= 4.0
 
 [testenv]
 commands = python -m pytest
@@ -38,14 +39,4 @@ commands = coverage erase
 commands = cog -r README.md
 deps =
     cogapp
-    attrs
     flake8
-
-[gh-actions]  # For tox GHA
-python =
-  3.9: py39
-  3.10: py310
-  3.11: py311
-  3.12: py312
-  3.13: py313
-  3.14: py314
