--- a/.github/workflows/lint_test.yml
+++ b/.github/workflows/lint_test.yml
@@ -15,17 +15,17 @@ jobs:
     steps:
     - uses: actions/checkout@v4
 
+    - name: Set up Python
+      uses: actions/setup-python@v6
+      with:
+        python-version-file: "pyproject.toml"
+
     - name: Install uv
       uses: astral-sh/setup-uv@v6
       with:
         version: "0.8.x"
         enable-cache: true
         cache-dependency-glob: "uv.lock"
-
-    - name: Set up Python
-      uses: actions/setup-python@v5
-      with:
-        python-version-file: "pyproject.toml"
 
     - name: Install dependencies
       run: uv sync --all-extras --dev
@@ -38,21 +38,19 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ["3.9", "3.10", "3.11", "3.12", "3.13", "3.14-dev"]
+        python-version: ["3.10", "3.11", "3.12", "3.13", "3.14-dev"]
       fail-fast: false
 
     steps:
     - uses: actions/checkout@v4
 
-    - name: Install uv
-      uses: astral-sh/setup-uv@v6
-      with:
-        version: "0.8.x"
-        enable-cache: true
-        cache-dependency-glob: "uv.lock"
+    - name: Get Non-Hyphenated Python Version
+      id: get-pyver
+      run: |
+        echo "PYVER=$(cut -d '-' -f 1 <<< ${{ matrix.python-version }})" >> $GITHUB_OUTPUT
 
     - name: Set up (release) Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v5
+      uses: actions/setup-python@v6
       if: "!endsWith(matrix.python-version, '-dev')"
       with:
         python-version: ${{ matrix.python-version }}
@@ -63,13 +61,21 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
 
+    - name: Install uv
+      uses: astral-sh/setup-uv@v6
+      with:
+        version: "0.8.x"
+        enable-cache: true
+        cache-dependency-glob: "uv.lock"
+
     - name: Install dependencies
       run: |
-        uv venv
-        uv pip install tox-gh-actions tox-uv
+        uv venv --python ${{ steps.get-pyver.outputs.PYVER }}
+        uv pip install tox-uv
 
     - name: Run tests w/tox
-      run: uv run tox
+      run: |
+        uv run tox -e ${{ steps.get-pyver.outputs.PYVER }}
 
     - name: Cache coverage for ${{ matrix.python-version }}
       uses: actions/upload-artifact@v4
@@ -87,7 +93,7 @@ jobs:
     - uses: actions/checkout@v4
 
     - name: Set up Python
-      uses: actions/setup-python@v5
+      uses: actions/setup-python@v6
       with:
         python-version-file: "pyproject.toml"
 
